syntax="proto3";

package user_service;

// option go_package = ".;user_service";

import "common/common.proto";
 
service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc AuthUser(AuthRequest) returns (AuthResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {}
    rpc GetUsersByID(GetUsersByIDRequest) returns (GetUsersByIDResponse) {}
}

message GetUsersByIDRequest {
    string tracing_ID = 1;
    repeated string user_uuids = 2;
}

message GetUsersByIDResponse {
    int32 status_code = 1;
    string msg = 2;
    repeated common.LightUserModel users = 3;
}
message GetUserByIDRequest {
    string tracing_ID = 1;
    string uuid = 2;
}

message GetUserByIDResponse {
    int32 status_code = 1;
    string msg = 2;
    common.UserModel user = 3;
}

message UpdateUserRequest {
    string tracing_ID = 1;
    string UUID = 2;
    string first_name = 3;
    string last_name = 4;
   string orgn_position = 5;
}

message UpdateUserResponse {
    int32 status_code = 1; 
    string msg = 2;
}

message CreateUserRequest {
    string username = 1; 
    string password = 2;
    string orgn_domain = 3;
    string tracing_ID = 4;
    string first_name = 5;
    string last_name = 6;
    string orgn_position = 7;
}

message CreateUserResponse {
    int32 status_code = 1;
    string msg = 2;    
}

// AuthRequest is the actual authentication request
// coming form the API-Gateway
message AuthRequest {
    string username = 1;
    string password = 2; 
    string tracing_ID = 4;
}

// AuthResponse represents the response when a user
// performs a login request
message AuthResponse {
    int32 status_code = 1;
    string msg = 2;
    bool authenticated = 3;
    common.LightUserModel user = 4;
}


